# py-lightweight-charts

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
demos/: live_data.py  markers.py  panes.py  static_data.py
src/py_lightweight_charts/: __init__.py  chart.py  py_lightweight_charts.py
src/py_lightweight_charts/static/: app.js  lightweight-charts.standalone.production.js  lightweight-charts.standalone.production.mjs
src/py_lightweight_charts/templates/: index.html
