[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "py_lightweight_charts"
version = "0.0.1"
authors = [
  { name="Jack Rochester", email="jackroc97@gmail.com" },
]
description = "A python wrapper for TradingView's Lightweight Charts library, using flask and websockets."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "Flask==3.1.0",
  "Flask-SocketIO==5.5.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.html"]